2003-04-13  Ethan Merritt <merritt@u.washington.edu>

	* src/term.c src/graphics.c: Correct a syntax bug in test for terminal
	support of filled boxes.  This fixes reported crashes under MSWin.

2003-04-13  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Document that libgd will handle both TrueType
	and Adobe Type 1 fonts.

	* src/unset.c: Set tic label rotation to 0 on unset or reset.

2003-04-04  Ethan Merritt <merritt@u.washington.edu>

	* term/pslatex.trm term/epslatex.trm: Add filled box support.

	* term/eepic.trm: Fix broken parsing of terminal options.

	* term/pstricks.trm: Remove unused prototype PSTRICKS_previous_palette.

2003-04-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt (winmain.obj): Don't repeat HELPFILE
 	definition --- already part of CFLAGS.

2003-04-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: Support for IPFC 2.1. Use temporary script file
	when creating allterm.h.

2003-04-03  Ethan Merritt <merritt@u.washington.edu>

	* src/term.c: Only test fill patterns on terminals that support it.

2003-04-01  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Fix bugs in parsing terminal size and setting tic size.

2003-03-31  Ethan Merritt <merritt@u.washington.edu>

	* src/bitmap.c src/gplt_x11.c term/gd.trm term/pdf.trm:
	Add a cross-hatch fill pattern. The change to bitmap.c affects the
	epson, hpxx, and pbm terminal types.

2003-03-31  Ethan Merritt <merritt@u.washington.edu>

	* src/bitmap.c term/pdf.trm: Revise the order of colors slightly
	to maximize contrast between successive plots (affects gd.trm also).

	* src/term.c: Add linewidth and fill patterns to terminal test.

2003-03-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/save.c (save_set_all): Don't compare an enum label to a
 	pointer; not even if the enum is zero.  Found by John Bollinger on
 	MS VC++.

	* src/show.c (show_key): Likewise.
