@@ -1,7 +1,10 @@
 2003-04-13  Ethan Merritt <merritt@u.washington.edu>
 
-	* src/term.c src/graphics.c: Correct a syntax bug in test for terminal
+	* src/term.c src/graphics.c: Correct a syntax error in test for terminal
 	support of filled boxes.  This fixes reported crashes under MSWin.
+
+	* src/gadgets.c src/mouse.c: Fix the same syntax error in other files
+	also, although no crashes have been reported for these.
 
 2003-04-13  Ethan Merritt <merritt@u.washington.edu>
 
